--- a/configurationFile-comm.json
+++ b/configurationFile-comm.json
@@ -37,16 +37,17 @@
 				"group": "display",
                 "properties": {
                     "control": {
-                        "endOfLineString": "\n",
-                        "deviceReadyResponsePattern": "",
-                        "method": "ssh",
-                        "tcpSshProperties": {
-                            "address": "127.0.0.2",
-                            "port": 22,
-                            "autoReconnect": true,
-                            "AutoReconnectIntervalMs": 10000,
-                            "username": "default",
-                            "password": "default"
+                        "controlPortDevKey": "processor",
+                        "controlPortNumber": 1,
+                        "method": "com",
+                        "comParams": {
+                            "protocol": "RS232",
+                            "baudRate": 9600,
+                            "hardwareHandshake": "None",
+                            "softwareHandshake": "None",
+                            "dataBits": 8,
+                            "parity": "None",
+                            "stopBits": 1
                         }
                     },
                     "Enabled": true,
