--- a/epi.display.sharp/Epi.Display.Sharp.csproj
+++ b/epi.display.sharp/Epi.Display.Sharp.csproj
@@ -59,9 +59,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Essentials-Builds\PepperDash_Core.dll</HintPath>
     </Reference>
-    <Reference Include="PepperDash_Essentials_Core, Version=1.4.32.38755, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDash_Essentials_Core, Version=1.5.5.26566, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Essentials-Builds\PepperDash_Essentials_Core.dll</HintPath>
+      <HintPath>..\..\..\essentials-builds\PepperDash_Essentials_Core.dll</HintPath>
     </Reference>
     <Reference Include="PepperDash_Essentials_DM, Version=1.3.7348.38761, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -95,19 +95,19 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandTimer\CommandTimer.cs" />
+    <Compile Include="SharpDisplayPluginProtocolCmdStyleFactory.cs" />
     <Compile Include="EventArgs\SharpDisplayEventArgs.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle01.cs" />
+    <Compile Include="SharpDisplayPluginMessage.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyleBase.cs" />
+    <Compile Include="SharpPluginQueues\SharpDisplayQueue.cs" />
     <Compile Include="SharpDisplayPluginDevice.cs" />
     <Compile Include="SharpDisplayPluginBridge.cs" />
     <Compile Include="SharpDisplayPluginConfigObject.cs" />
-    <Compile Include="SharpDisplayPluginDeviceClasses\SharpDisplayProtocolStyle04.cs" />
-    <Compile Include="SharpDisplayPluginDeviceClasses\SharpDisplayProtocolStyle03.cs" />
-    <Compile Include="SharpDisplayPluginDeviceClasses\SharpDisplayProtocolStyle02.cs" />
-    <Compile Include="SharpDisplayPluginDeviceClasses\SharpDisplayProtocolStyle01.cs" />
-    <Compile Include="SharpDisplayPluginDeviceClasses\SharpDisplayBaseClass.cs" />
     <Compile Include="SharpDisplayPluginDeviceInterfaces.cs" />
     <Compile Include="SharpDisplayPluginFactory.cs" />
     <Compile Include="SharpDisplayPluginPoll.cs" />
-    <Compile Include="SharpDisplayPluginProtocolStyleFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Properties\ControlSystem.cfg" />
   </ItemGroup>
