--- a/configurationFile-comm-p02.json
+++ b/configurationFile-comm-p02.json
@@ -52,7 +52,7 @@
                     },
                     "Enabled": true,
                     "Name": "Main Display",
-                    "Protocol": 1
+                    "Protocol": "ProtocolStyle03"
                 }
             },
             {
