--- a/configurationFile-comm-p03.json
+++ b/configurationFile-comm-p03.json
@@ -42,7 +42,7 @@
                         "method": "com",
                         "comParams": {
                             "protocol": "RS232",
-                            "baudRate": 9600,
+                            "baudRate": 115,
                             "hardwareHandshake": "None",
                             "softwareHandshake": "None",
                             "dataBits": 8,
@@ -52,7 +52,7 @@
                     },
                     "Enabled": true,
                     "Name": "Main Display",
-                    "Protocol": 1
+                    "Protocol": "ProtocolStyle03"
                 }
             },
             {
