--- a/epi.display.sharp/Epi.Display.Sharp.csproj
+++ b/epi.display.sharp/Epi.Display.Sharp.csproj
@@ -46,26 +46,22 @@
     <GenerateSerializationAssemblies>off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Essentials Devices Common, Version=1.4.7348.38758, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Essentials Devices Common, Version=1.5.5.26569, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Essentials-Builds\Essentials Devices Common.dll</HintPath>
+      <HintPath>..\..\..\essentials-builds\Essentials Devices Common.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
-    <Reference Include="PepperDashEssentials, Version=1.4.32.38764, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDashEssentials, Version=1.5.5.26575, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Essentials-Builds\PepperDashEssentials.dll</HintPath>
+      <HintPath>..\..\..\essentials-builds\PepperDashEssentials.dll</HintPath>
     </Reference>
-    <Reference Include="PepperDash_Core, Version=1.0.31.23583, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDash_Core, Version=1.0.35.25073, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Essentials-Builds\PepperDash_Core.dll</HintPath>
+      <HintPath>..\..\..\essentials-builds\PepperDash_Core.dll</HintPath>
     </Reference>
     <Reference Include="PepperDash_Essentials_Core, Version=1.5.5.26566, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\essentials-builds\PepperDash_Essentials_Core.dll</HintPath>
-    </Reference>
-    <Reference Include="PepperDash_Essentials_DM, Version=1.3.7348.38761, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Essentials-Builds\PepperDash_Essentials_DM.dll</HintPath>
     </Reference>
     <Reference Include="SimplSharpCustomAttributesInterface, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1099c178b3b54c3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -99,6 +95,12 @@
     <Compile Include="Inputs\SharpDisplayPluginInput.cs" />
     <Compile Include="SharpDisplayPluginProtocolCmdStyleFactory.cs" />
     <Compile Include="EventArgs\SharpDisplayEventArgs.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle_PN_UH701.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle_PN_UH501.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle04.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle03.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle02.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle05.cs" />
     <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyleNotDefined.cs" />
     <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle01.cs" />
     <Compile Include="SharpDisplayPluginMessage.cs" />
