--- a/epi.display.sharp/Epi.Display.Sharp.csproj
+++ b/epi.display.sharp/Epi.Display.Sharp.csproj
@@ -48,34 +48,32 @@
   <ItemGroup>
     <Reference Include="Essentials Devices Common, Version=1.5.5.26569, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\essentials-builds\Essentials Devices Common.dll</HintPath>
+      <HintPath>..\..\essentials-builds\Essentials Devices Common.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="PepperDashEssentials, Version=1.5.5.26575, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\essentials-builds\PepperDashEssentials.dll</HintPath>
+      <HintPath>..\..\essentials-builds\PepperDashEssentials.dll</HintPath>
     </Reference>
     <Reference Include="PepperDash_Core, Version=1.0.35.25073, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\essentials-builds\PepperDash_Core.dll</HintPath>
+      <HintPath>..\..\essentials-builds\PepperDash_Core.dll</HintPath>
     </Reference>
     <Reference Include="PepperDash_Essentials_Core, Version=1.5.5.26566, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\essentials-builds\PepperDash_Essentials_Core.dll</HintPath>
+      <HintPath>..\..\essentials-builds\PepperDash_Essentials_Core.dll</HintPath>
     </Reference>
     <Reference Include="SimplSharpCustomAttributesInterface, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1099c178b3b54c3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\ProgramData\Crestron\SDK\SimplSharpCustomAttributesInterface.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\essentials-builds\SimplSharpCustomAttributesInterface.dll</HintPath>
     </Reference>
     <Reference Include="SimplSharpHelperInterface, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1099c178b3b54c3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\ProgramData\Crestron\SDK\SimplSharpHelperInterface.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\essentials-builds\SimplSharpHelperInterface.dll</HintPath>
     </Reference>
     <Reference Include="SimplSharpNewtonsoft, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1099c178b3b54c3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\ProgramData\Crestron\SDK\SimplSharpNewtonsoft.dll</HintPath>
+      <HintPath>..\..\essentials-builds\SimplSharpNewtonsoft.dll</HintPath>
     </Reference>
     <Reference Include="SimplSharpPro, Version=1.5.3.17, Culture=neutral, PublicKeyToken=1099c178b3b54c3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -84,7 +82,7 @@
     </Reference>
     <Reference Include="SimplSharpReflectionInterface, Version=1.0.5583.25238, Culture=neutral, PublicKeyToken=1099c178b3b54c3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\ProgramData\Crestron\SDK\SimplSharpReflectionInterface.dll</HintPath>
+      <HintPath>..\..\essentials-builds\SimplSharpReflectionInterface.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -92,24 +90,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandTimer\CommandTimer.cs" />
+    <Compile Include="ECommands.cs" />
     <Compile Include="Inputs\SharpDisplayPluginInput.cs" />
+    <Compile Include="SharpDisplayCommand.cs" />
     <Compile Include="SharpDisplayPluginProtocolCmdStyleFactory.cs" />
-    <Compile Include="EventArgs\SharpDisplayEventArgs.cs" />
-    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle_PN_UH701.cs" />
-    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle_PN_UH501.cs" />
-    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle04.cs" />
-    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle03.cs" />
-    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle02.cs" />
-    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle05.cs" />
+    <Compile Include="DisplayEventArgs\SharpDisplayEventArgs.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayPluginResponseError.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayPluginResponseOk.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayPluginResponseWait.cs" />
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyleBase.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStylePNUH501.cs" />
     <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyleNotDefined.cs" />
-    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyle01.cs" />
-    <Compile Include="SharpDisplayPluginMessage.cs" />
-    <Compile Include="SharpDisplayProtocolCmdStyleClasses\SharpDisplayProtocolCmdStyleBase.cs" />
     <Compile Include="SharpPluginQueues\SharpDisplayQueue.cs" />
     <Compile Include="SharpDisplayPluginDevice.cs" />
-    <Compile Include="SharpDisplayPluginBridge.cs" />
     <Compile Include="SharpDisplayPluginConfigObject.cs" />
-    <Compile Include="SharpDisplayPluginDeviceInterfaces.cs" />
     <Compile Include="SharpDisplayPluginFactory.cs" />
     <Compile Include="SharpDisplayPluginPoll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
