--- a/.github/workflows/EssentialsPlugins-BetaBuilds-Caller_v1.yml
+++ b/.github/workflows/EssentialsPlugins-BetaBuilds-Caller_v1.yml
@@ -2,9 +2,9 @@ name: Beta Build
 
 on: push
 
-env:
+jobs:
   call-workflow:
     permissions:
       contents: read
-    pull-requests: write
+      pull-requests: write
     uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-betabuilds.yml@main
