feature: with branch

--- a/.github/workflows/EssentialsPlugins-BetaBuilds-Caller_v1.yml
+++ b/.github/workflows/EssentialsPlugins-BetaBuilds-Caller_v1.yml
@@ -8,5 +8,7 @@ jobs:
       contents: read
       pull-requests: write
     uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-betabuilds.yml@main
+    with: 
+      branch: ${{ inputs.branch }}
 
 
