feature: secrets inherit

--- a/.github/workflows/EssentialsPlugins-BetaBuilds-Caller_v1.yml
+++ b/.github/workflows/EssentialsPlugins-BetaBuilds-Caller_v1.yml
@@ -8,6 +8,7 @@ jobs:
       contents: read
       pull-requests: write
     uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-betabuilds.yml@main
+    secrets: inherit
     with: 
       branch: ${{ inputs.branch }}
 
