--- a/.github/workflows/EssentialsPlugins-BetaBuilds-Caller_v1.yml
+++ b/.github/workflows/EssentialsPlugins-BetaBuilds-Caller_v1.yml
@@ -1,7 +1,19 @@
 name: Beta Build
 
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches:
+      - '**'
+    branches-ignore: 
+      - 'main'
+      - 'master'
 
+  workflow_dispatch: 
+    inputs: 
+      branch:
+        description: 'Branch to build'
+        required: true 
+        type: string
 jobs:
   call-workflow:
     uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-betabuilds.yml@main
