--- a/.github/workflows/essentialsplugins-betabuilds-caller.yml
+++ b/.github/workflows/essentialsplugins-betabuilds-caller.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   call-workflow:
-    uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-betabuilds.yml
+    uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-betabuilds.yml@main
     secrets: inherit
     with: 
       branch: ${{ inputs.branch }}
