--- a/.github/workflows/essentialsplugins-betabuilds-caller.yml
+++ b/.github/workflows/essentialsplugins-betabuilds-caller.yml
@@ -18,4 +18,4 @@ jobs:
     secrets: inherit
     with: 
       branch: ${{ inputs.branch }}
-      defualt-branch: $default-branch
+      default-branch: $default-branch
