--- a/.github/workflows/essentialsplugins-releasebuilds-caller.yml
+++ b/.github/workflows/essentialsplugins-releasebuilds-caller.yml
@@ -20,7 +20,7 @@ jobs:
     uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-builds.yml@main
     secrets: inherit
     with: 
-      branch: ${{ inputs.branch }}
+      branch: ${{ github.ref_name }}
       default-branch: "main"
 
 
