--- a/.github/workflows/essentialsplugins-releasebuilds-caller.yml
+++ b/.github/workflows/essentialsplugins-releasebuilds-caller.yml
@@ -8,19 +8,12 @@ on:
     branches:
       - "main"
 
-  workflow_dispatch: 
-    inputs: 
-      branch:
-        description: 'Branch to build'
-        required: true 
-        type: string
-
 jobs:
   call-workflow:
     uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-builds.yml@main
     secrets: inherit
     with: 
-      branch: ${{ github.ref_name }}
+      branch: "main"
       default-branch: "main"
 
 
